FEAT jumbo image

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>Discord</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
-<body>
+<div>
     <div class="debug">
         <header>
             <div class="container">
-                <div class="row head">
+                <div class="row header">
                     <div class="col">
                         <img src="" alt="logo">
                     </div>
@@ -28,7 +28,47 @@
                     </div>
                 </div>
             </div>
-        </div>
         </header>
+        <main>
+            <div class="container"">
+                <div class="row jumbo">
+                    <div class="col-jumbo">
+                        <div class="">
+                            <!-- <img src="" alt="jumbo"> -->
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col"></div>
+                    <div class="col"></div>
+                </div>
+                <div class="row"></div>
+                <div class="row"></div>
+                <div class="row"></div>
+            </div>
+        </main>
+
+
+
+
+
+
+            <!-- <section class="presentation">
+                <div class="container-little">
+                </div>
+            </section>
+            <section>
+                <div class="container"></div>
+            </section>
+            <section>
+                <div class="container"></div>
+            </section>
+            <section>
+                <div class="container"></div>
+            </section>
+            <section>
+                <div class="container"></div>
+            </section> -->
+    </div>
 </body>
 </html>
