--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Discord</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
-<div>
+
     <div class="debug">
         <header>
             <div class="container">
@@ -30,45 +30,39 @@
             </div>
         </header>
         <main>
-            <div class="container"">
-                <div class="row jumbo">
-                    <div class="col-jumbo">
-                        <div class="">
-                            <!-- <img src="" alt="jumbo"> -->
-                        </div>
+            <section class="jumbo">
+                <div class="container">
+                    <div class="row jumbo">
+                        <div class="jumbo-image"></div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col"></div>
-                    <div class="col"></div>
+            </section>
+            <section class="image">
+                <div class="container"> <!--  gli da le dimensiouni  -->
+                    <div class="row intro"> <!-- gli da il flex -->
+                        <div class="column-image"></div>
+                        <div class="column-text"></div>
+                    </div>
                 </div>
-                <div class="row"></div>
-                <div class="row"></div>
-                <div class="row"></div>
-            </div>
+            </section>
+            <section class="image">
+                <div class="container"> <!--  gli da le dimensiouni  -->
+                    <div class="row intro reverse"> <!-- gli da il flex -->
+                        <div class="column-image"></div>
+                        <div class="column-text"></div>
+                    </div>
+                </div>
+            </section>
+            <section class="image">
+                <div class="container"> <!--  gli da le dimensiouni  -->
+                    <div class="row intro"> <!-- gli da il flex -->
+                        <div class="column-image"></div>
+                        <div class="column-text"></div>
+                    </div>
+                </div>
+            </section>
         </main>
-
-
-
-
-
-
-            <!-- <section class="presentation">
-                <div class="container-little">
-                </div>
-            </section>
-            <section>
-                <div class="container"></div>
-            </section>
-            <section>
-                <div class="container"></div>
-            </section>
-            <section>
-                <div class="container"></div>
-            </section>
-            <section>
-                <div class="container"></div>
-            </section> -->
     </div>
+
 </body>
 </html>
