FEAT footer section realized

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </div>
                 </div>
             </section>
-            <section class="image">
+            <section class="image color">
                 <div class="container"> <!--  gli da le dimensiouni  -->
                     <div class="row intro reverse"> <!-- gli da il flex -->
                         <div class="column-image"></div>
@@ -61,6 +61,24 @@
                     </div>
                 </div>
             </section>
+            <section class="image color">
+                <div class="container"> <!--  gli da le dimensiouni  -->
+                    <div class="row intro"> <!-- gli da il flex -->
+                        <div class="column-image"></div>
+                    </div>
+                </div>
+            </section>
+            <footer>
+                <div class="container ">
+                    <div class="row-footer">
+                        <div class="column-footer big"></div>
+                        <div class="column-footer"></div>
+                        <div class="column-footer"></div>
+                        <div class="column-footer"></div>
+                        <div class="column-footer"></div>
+                    </div>
+                </div>
+            </footer>
         </main>
     </div>
 
