STYLE  header added

--- a/index.html
+++ b/index.html
@@ -7,24 +7,25 @@
     <title>Discord</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
-
+<body>
     <div class="debug">
         <header>
             <div class="container">
                 <div class="row header">
                     <div class="col">
-                        <img src="" alt="logo">
+                        <img src="./img/logo.svg" alt="logo">
                     </div>
                     <div class="col ">
-                        <ul>
-                            <li>link</li>
-                            <li>link</li>
-                            <li>link</li>
-                            <li>link</li>
+                        <ul class="ul-header">
+                            <li>Scarica</li>
+                            <li>Perchè Discord</li>
+                            <li>Nitro</li>
+                            <li>Sicurezza</li>
+                            <li>Assistenza</li>
                         </ul>
                     </div>
                     <div class="col login">
-                        <button>LOGIN</button>
+                        <button>Accedi</button>
                     </div>
                 </div>
             </div>
@@ -81,6 +82,5 @@
             </footer>
         </main>
     </div>
-
 </body>
 </html>
