--- a/index.html
+++ b/index.html
@@ -41,31 +41,56 @@
             <section class="image">
                 <div class="container"> <!--  gli da le dimensiouni  -->
                     <div class="row intro"> <!-- gli da il flex -->
-                        <div class="column-image"></div>
-                        <div class="column-text"></div>
+                        <div class="column-image">
+                            <img src="./img/item1.svg" alt="item-1">
+                        </div>
+                        <div class="column-text">
+                            <h2>Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+                            <p>I server Discord sono organizzati in canali tematici in cui poter collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo</p>
+                        </div>
                     </div>
                 </div>
             </section>
             <section class="image color">
                 <div class="container"> <!--  gli da le dimensiouni  -->
                     <div class="row intro reverse"> <!-- gli da il flex -->
-                        <div class="column-image"></div>
-                        <div class="column-text"></div>
+                        <div class="column-image">
+                            <img src="./img/item2.svg" alt="">
+                        </div>
+                        <div class="column-text">
+                            <h2>Dove trovarsi è facile</h2>
+                            <p>Mettiti comodo in un canale vocale quando hai tempo. Glia amici nel tuo server possono vedere che sei li e unirsi istantanamente senza dover chimare.</p>
+                        </div>
                     </div>
                 </div>
             </section>
             <section class="image">
                 <div class="container"> <!--  gli da le dimensiouni  -->
                     <div class="row intro"> <!-- gli da il flex -->
-                        <div class="column-image"></div>
-                        <div class="column-text"></div>
+                        <div class="column-image">
+                            <img src="./img/item3.svg" alt="">
+                        </div>
+                        <div class="column-text">
+                            <h2>Da pochi a un fandom</h2>
+                            <p>Dai inizio a una comunity di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.</p>
+                        </div>
                     </div>
                 </div>
             </section>
             <section class="image color">
                 <div class="container"> <!--  gli da le dimensiouni  -->
                     <div class="row intro"> <!-- gli da il flex -->
-                        <div class="column-image"></div>
+                        <div class="column-image">
+                            <h2>Tecnlogia affidabile per tenersi in contatto</h2>
+                            <p>Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fa ciao in vide, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+                            <img src="./img/item4-big.svg" alt="">
+                            <div class="download">
+                                <img src="./img/stars.svg" alt="">
+                                <h3>Pronto ad inizare la tua avventura?</h3>
+                                <button>Sarica per Mac</button>
+                            </div>
+
+                        </div>
                     </div>
                 </div>
             </section>
